fix vertical spacing on soundbar

--- a/public/css/tf-styles.css
+++ b/public/css/tf-styles.css
@@ -61,6 +61,10 @@ body.search-open {
 	position: relative;
 }
 
+.v-center-progress {
+	top: -15px !important;
+}
+
 .tf-player-controls-wrap-info {
 	display: inline-block;
 	vertical-align: middle;
